# fmi4c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fmi4c.py
.github/workflows/: ci-build.yaml
cmake/: config.cmake.in
doc/: CMakeLists.txt
include/: fmi4c.h  fmi4c_common.h  fmi4c_functions_fmi1.h  fmi4c_functions_fmi2.h  fmi4c_functions_fmi3.h  fmi4c_placeholders.h  fmi4c_private.h  fmi4c_public.h  fmi4c_types_fmi1.h  fmi4c_types_fmi2.h  fmi4c_types_fmi3.h  fmi4c_utils.h  fmic.h  fmic_functions.h  fmic_functions_fmi1.h  fmic_functions_fmi2.h  fmic_functions_fmi3.h  fmic_private.h  fmic_public.h  fmic_types.h  fmic_types_fmi1.h  fmic_types_fmi2.h  fmic_types_fmi3.h  fmic_utils.h
include/test/: fmi4c_test.h  fmi4c_test_fmi1.h  fmi4c_test_fmi3.h  fmi4c_test_tlm.h  fmic_test.h  fmic_test_fmi1.h  fmic_test_fmi2.h  fmic_test_fmi3.h  fmic_test_tlm.h
src/: fmi4c.c  fmi4c_placeholders.h  fmi4c_private.h  fmi4c_utils.c  fmi4c_utils.h  fmic.c  fmic_test.c  fmic_utils.c
src/test/: fmi4c_test.c  fmi4c_test_fmi1.c  fmi4c_test_fmi2.c  fmi4c_test_fmi3.c  fmi4c_test_tlm.c  fmic_test.c  fmic_test_fmi1.c  fmic_test_fmi2.c  fmic_test_fmi3.c  fmic_test_tlm.c  input.csv
src/test/fmi1cs/: fmi1cs.c  modelDescription.xml
src/test/fmi1me/: fmi1me.c  modelDescription.xml
src/test/fmi2/: fmi2.c
src/test/fmi3/: fmi3.c
src/test/fmi3tlm/: fmi3tlm.c  modelDescription.xml
test/: CMakeLists.txt  fmi4c_test.c  fmi4c_test.h  fmi4c_test_fmi1.c  fmi4c_test_fmi1.h  fmi4c_test_fmi2.c  fmi4c_test_fmi2.h  fmi4c_test_fmi3.c  fmi4c_test_fmi3.h  fmi4c_test_tlm.c  fmi4c_test_tlm.h  pytest.py
test/fmi1cs/: fmi1cs.c  modelDescription.xml
test/fmi1me/: fmi1me.c  modelDescription.xml
test/fmi2/: fmi2.c  modelDescription.xml
test/fmi3/: fmi3.c  modelDescription.xml
test/fmi3tlm/: fmi3tlm.c
